--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,5 +13,6 @@
 <body>
 	<%- body %>
 	<script src="/static/js/<%=assetsCacheHashes.js||0%>/client.js" type="text/javascript"></script>
+	<script src="/static/<%=assetsCacheHashes['js-inject']||0%>/injected.js" type="text/javascript"></script>
 </body>
 </html>
